--- a/book-recommender-system-app/requirements.txt
+++ b/book-recommender-system-app/requirements.txt
@@ -65,8 +65,9 @@ terminado==0.15.0
 tinycss2==1.1.1
 tornado==6.1
 traitlets==5.2.2.post1
+uuid==1.30
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.1.2
+xmltodict==0.13.0
 zipp==3.8.0
-gunicorn==19.9.0
