--- a/book-recommender-system-app/requirements.txt
+++ b/book-recommender-system-app/requirements.txt
@@ -16,6 +16,7 @@ fastjsonschema==2.15.3
 Flask==2.1.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==19.9.0
 importlib-metadata==4.11.4
 importlib-resources==5.8.0
 ipykernel==6.13.1
