--- a/course-recommender-system-app/requirements.txt
+++ b/course-recommender-system-app/requirements.txt
@@ -7,52 +7,62 @@ beautifulsoup4==4.11.1
 bleach==5.0.0
 cffi==1.15.0
 click==8.1.3
-cycler==0.11.0
+cloudpickle==2.1.0
+dask==2022.7.1
+dask-glm==0.2.0
+dask-ml==2022.5.27
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+distlib==0.3.5
+distributed==2022.7.1
 entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
-Flask==2.1.0
-fonttools==4.33.3
-gunicorn==19.9.0
+filelock==3.8.0
+Flask==2.1.2
+Flask-SQLAlchemy==2.5.1
+fsspec==2022.5.0
+graphviz==0.20.1
+greenlet==1.1.2
+HeapDict==1.0.1
 importlib-metadata==4.11.4
+importlib-resources==5.8.0
 iniconfig==1.1.1
-ipykernel==6.13.0
+ipykernel==6.13.1
 ipython==8.4.0
 ipython-genutils==0.2.0
-ipywidgets==7.7.0
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==7.3.1
-jupyter-console==6.4.3
+jsonschema==4.6.0
+jupyter-client==7.3.4
 jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.0
-kiwisolver==1.4.2
+llvmlite==0.38.1
+locket==1.0.0
 MarkupSafe==2.1.1
-matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
-nbclient==0.6.3
+msgpack==1.0.4
+multipledispatch==0.6.0
+nbclient==0.6.4
 nbconvert==6.5.0
 nbformat==5.4.0
 neattext==0.1.3
 nest-asyncio==1.5.5
-notebook==6.4.11
+notebook==6.4.12
+numba==0.55.2
 numpy==1.22.4
 packaging==21.3
 pandas==1.4.2
 pandocfilters==1.5.0
 parso==0.8.3
+partd==1.2.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.1.1
+platformdirs==2.5.2
 pluggy==1.0.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
@@ -60,33 +70,40 @@ psutil==5.9.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
-pyaml==21.10.1
 pycparser==2.21
 Pygments==2.12.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
 pytest==7.1.2
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 PyYAML==6.0
-pyzmq==23.0.0
-qtconsole==5.3.0
-QtPy==2.1.0
+pyzmq==23.1.0
 scikit-learn==1.1.1
 scipy==1.8.1
-seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.37
 stack-data==0.2.0
+tblib==1.7.0
 terminado==0.15.0
 threadpoolctl==3.1.0
 tinycss2==1.1.1
+toml==0.10.2
 tomli==2.0.1
+toolz==0.12.0
 tornado==6.1
-traitlets==5.2.1.post0
+tox==3.25.1
+traitlets==5.2.2.post1
+urllib3==1.26.10
+uuid==1.30
+virtualenv==20.16.3
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.1.2
-widgetsnbextension==3.6.0
+xmltodict==0.13.0
+zict==2.2.0
 zipp==3.8.0
