--- a/vehicle-detection-app/requirements.txt
+++ b/vehicle-detection-app/requirements.txt
@@ -1,14 +1,18 @@
 asttokens==2.0.8
+attrs==22.1.0
 backcall==0.2.0
 click==8.1.3
 debugpy==1.6.3
 decorator==5.1.1
+distlib==0.3.6
 entrypoints==0.4
 escape==1.1
 executing==1.0.0
+filelock==3.8.0
 Flask==2.1.1
 gunicorn==19.9.0
 importlib-metadata==4.12.0
+iniconfig==1.1.1
 ipykernel==6.15.2
 ipython==8.5.0
 itsdangerous==2.1.2
@@ -27,19 +31,26 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
+platformdirs==2.5.2
+pluggy==1.0.0
 prompt-toolkit==3.0.31
 psutil==5.9.2
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 Pygments==2.13.0
 pyparsing==3.0.9
 pytesseract==0.3.7
+pytest==7.1.3
 python-dateutil==2.8.2
 pyzmq==23.2.1
 six==1.16.0
 stack-data==0.5.0
+tomli==2.0.1
 tornado==6.2
+tox==3.26.0
 traitlets==5.3.0
+virtualenv==20.16.5
 wcwidth==0.2.5
 Werkzeug==2.2.2
 zipp==3.8.1
