--- a/text-extraction-app/requirements.txt
+++ b/text-extraction-app/requirements.txt
@@ -1,6 +1,58 @@
-opencv-python-headless<4.3
-pytesseract==0.3.7
-numpy==1.19.3
+asttokens==2.0.8
+attrs==22.1.0
+backcall==0.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.1
+click==8.1.2
+debugpy==1.6.3
+decorator==5.1.1
+distlib==0.3.6
+entrypoints==0.4
+executing==1.0.0
+filelock==3.8.0
 Flask==2.1.1
+idna==3.3
+importlib-metadata==4.11.3
+iniconfig==1.1.1
+ipykernel==6.15.2
+ipython==8.5.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.1
+jupyter-client==7.3.5
+jupyter-core==4.11.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.5
+numpy==1.19.3
+opencv-python-headless==4.2.0.34
+packaging==21.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.0.1
-gunicorn==19.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+Pygments==2.13.0
+pyparsing==3.0.9
+pytesseract==0.3.7
+pytest==7.1.3
+python-dateutil==2.8.2
+pyzmq==23.2.1
+requests==2.28.1
+six==1.16.0
+stack-data==0.5.0
+tomli==2.0.1
+tornado==6.2
+tox==3.26.0
+traitlets==5.3.0
+urllib3==1.26.12
+virtualenv==20.16.5
+wcwidth==0.2.5
+Werkzeug==2.1.1
+zipp==3.8.0
