--- a/vehicle-detection-app/requirements.txt
+++ b/vehicle-detection-app/requirements.txt
@@ -25,7 +25,7 @@ marshmallow==3.17.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.5
 numpy==1.19.3
-opencv-python-headless==4.2.0.32
+opencv-python-headless<4.3
 packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
